# rcm

./: .editorconfig  .gitignore  CMakeLists.txt  GNUmakefile  README.md
app/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  vite.config.ts
app/src/: App.tsx  BoardPanel.tsx  CentaurScreen.tsx  Chessboard.css  Chessboard.tsx  ChessboardArrows.tsx  ConfirmColor.tsx  Content.tsx  Dialogs.tsx  Editor.tsx  Menu.tsx  Navbar.tsx  PgnPanel.css  PgnPanel.tsx  PreviousGames.tsx  SoundSettings.tsx  Toasts.tsx  ViewPgn.tsx  WebSettings.tsx  events.ts  main.tsx  pieces.ts
app/src/store/: boardSlice.ts  chessboardSlice.ts  displaySlice.ts  editorSlice.ts  historySlice.ts  hooks.ts  index.ts  menuSlice.ts
doc/: gameplay.md
src/: board.c  board.cpp  board.h  boardserial.h  centaur.c  centaur.cpp  centaur.h  cfg.c  cfg.cpp  cfg.h  db.c  db.cpp  db.h  epd2in9d.h  graphics.c  graphics.cpp  graphics.h  httpd.c  httpd.cpp  httpd.h  image.c  image.cpp  image.h  list.c  list.h  main.c  main.cpp  mem.c  mem.h  model.c  model.h  screen.c  screen.cpp  screen.h  standard.c  standard.cpp  standard.h
src/centaur/: CONTENTS  boardserial.c  boardserial.cpp  boardserial.h  epd2in9d.c  epd2in9d.cpp  epd2in9d.h
src/chess/: chess.c  chess.h  chess_action.cpp  chess_action.h  chess_board.c  chess_board.cpp  chess_board.h  chess_engine.c  chess_engine.cpp  chess_engine.h  chess_fen.c  chess_fen.h  chess_game.c  chess_game.cpp  chess_game.h  chess_generate.c  chess_generate.h  chess_move.c  chess_move.h  chess_pgn.c  chess_pgn.cpp  chess_pgn.h  chess_position.c  chess_position.cpp  chess_position.h  chess_san.c  chess_san.h  chess_uci.c  chess_uci.cpp  chess_uci.h
src/fonts/: CONTENTS  font12.cpp  font16.cpp  font20.c  font24.c  font8.c  fonts.h
src/mods/: mod_1v1.c  mod_1v1.h  mod_private.h  mods.c  mods.h
src/stub/: CONTENTS  boardserial.c  boardserial.cpp  boardserial.h  epd2in9d.c  epd2in9d.cpp  epd2in9d.h
src/thc/: Castling.h  ChessDefs.h  ChessPosition.cpp  ChessPosition.h  ChessPositionRaw.h  ChessRules.cpp  ChessRules.h  Detail.h  GeneratedLookupTables.h  HashLookup.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Portability.cpp  PrivateChessDefs.cpp  PrivateChessDefs.h  fen.cpp  fen.h  gen.cpp  gen.h  san.cpp  san.h  thc.h  uci.cpp  uci.h
src/utility/: CONTENTS  buffer.c  buffer.cpp  buffer.h  kv.c  kv.cpp  kv.h  list.c  list.cpp  list.h  model.c  model.cpp  model.h  sleep.cpp  sleep.h  utility.c  utility.h
t/: check.c  check_chessdefs.cpp  check_demo.cpp  check_detail.cpp  check_game.c  check_game.cpp  check_internals.cpp  check_opera.cpp  check_pgn.c  check_pgn.cpp  check_san.c
